--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 pcap = "0.9.2"
 pktparse = "0.7.1"
 clap = {version = "3.2.12", features = [ "derive" ]}
+mac_address = "1.1.3"
 # serde_json = "1.0.82"
