--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ pcap = "0.9.2"
 pktparse = "0.7.1"
 clap = {version = "3.2.12", features = [ "derive" ]}
 mac_address = "1.1.3"
-# serde_json = "1.0.82"
+serde_json = "1.0.82"
+serde = "1.0.140"
